feat: sistema OTP persistente con rate limiting y anti-brute force
- Nuevas entidades JPA: CodigoOtp, TipoOtp (usan HOT_CLICK_CODIGO_OTP_TB existente)
- OtpService unificado: reemplaza ConcurrentHashMap con persistencia en BD
  - Códigos hasheados con BCrypt antes de guardar
  - Rate limit: máx 3 solicitudes cada 10 min por usuario
  - Anti-brute force: bloqueo tras 5 intentos fallidos
  - Expiración 5 min (configurable en HOT_CLICK_TIPO_OTP_TB)
- EmailVerificationService: registro crea cuenta PENDIENTE en BD, OTP en BD
- PasswordResetService: reset usa OtpService (ya no in-memory)
- AuthController: login bloquea estado PENDIENTE con mensaje de verificación
- JwtUtil: JWT_SECRET migrado a variable de entorno ${JWT_SECRET}
- SecurityConfig: CORS restrictivo vía ${CORS_ALLOWED_ORIGINS}
- LoginPage: error 403 muestra botón "Reenviar código de verificación"
- SQL: estado PENDIENTE (ID=5), seed TipoOtp, índices en tabla OTP

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>